--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "format": "prettier --write --ignore-unknown ./src"
     },
     "dependencies": {
+        "@types/node": "^22.7.6",
         "eslint-config-prettier": "^9.1.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
